straightline/src/main/java/org/poormanscastle/studies/compilers/grammar/samplelang1/javacc/samplelang1.jj

options {
    STATIC = false;
}

PARSER_BEGIN(SampleLang1)
package org.poormanscastle.studies.compilers.grammar.samplelang1.javacc;
public class SampleLang1{}
PARSER_END(SampleLang1)

SKIP : {
    " " | "\t" | "\n"
}

TOKEN : {
    < ASSIGN : "=" > |
    < WHILE : "while" > |
    < DO : "do" > |
    < BEGIN : "begin" > |
    < END : "end" > |
    < IF : "if" > |
    < THEN : "then" > |
    < ELSE : "else" > |
    < SEMI : ";" > |
    < ID : ["a"-"z"](["a"-"z"] | ["0"-"9"])* >
}

void Prog() :
{}
{ StmList() <EOF> }

void StmList() :
{}
{ Stm() StmListPrime() }

void StmListPrime() :
{}
{ ( <SEMI> Stm() StmListPrime() )? }

void Stm() :
{}
{
    <ID> "=" <ID> |
    <WHILE> <ID> <DO> Stm() |
    <BEGIN> StmList() <END> |
    LOOKAHEAD(5) <IF> <ID> <THEN> Stm() |
    <IF> <ID> <THEN> Stm() <ELSE> Stm()
}
